Fix bug where you can set 0 in the interval

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <span><img src="rfrshicon_44.png" /><text>RFRSH</text></span>
     <br/>
     <label id="tabName"></label>
-    <input id="interval" type="number">
+    <input id="interval" type="number" min="1">
     <br/>
     <label class="switch">
       <input id="cbxRefresh" type="checkbox">
